<resources>
    <string name="app_name">Time Table</string>
    <string name="copywrite_details">Copyright © 2018 Time Table | Powered by Md Abdullah Al Hasan</string>
    <string-array name="period_details">
        <item>Period-1(09:00am-10:00am)</item>
        <item>Period-2(10:00am-11:00am)</item>
        <item>Period-3(11:00am-12:00pm)</item>
        <item>Period-4(12:00pm-01:00pm)</item>
        <item>Period-5(02:00pm-03:00pm)</item>
        <item>Period-6(03:00pm-04:00pm)</item>
        <item>Period-7(04:00pm-05:00pm)</item>
    </string-array>

    <string-array name="dayNames">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="developer1">Md Abdullah Al Hasan\nComputer Science and Engineering\nJessore University of Science and Technology</string>
    <string name="developer2">Md Sumon Ali\nComputer Science and Engineering\nJessore University of Science and Technology</string>
    <string name="developer3">Milon Kumar Das\nComputer Science and Engineering\nJessore University of Science and Technology</string>

    <string name="p1">09:00am-10:00am :</string>
    <string name="p2">10:00am-11:00am :</string>
    <string name="p3">11:00am-12:00pm :</string>
    <string name="p4">12:00pm-01:00pm :</string>
    <string name="p5">02:00pm-03:00pm :</string>
    <string name="p6">03:00pm-04:00pm :</string>
    <string name="p7">04:00pm-05:00pm :</string>
</resources>
